--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="Project/Reports/pdf/Коваленко_ППИ_лр4.pdf">Лабораторная работа №4</a>
                 <a href="Project/Reports/pdf/Коваленко_ППИ_лр5.pdf">Лабораторная работа №5</a>
                 <a href="Project/Reports/pdf/Коваленко_ППИ_лр6.pdf">Лабораторная работа №6</a>
+                <a href="https://github.com/chrom-ist/ASA"><span>Наш Репозиторий</span></a>
             </nav>
             <section class="sys-info">
                 <span class="long-name">Система учёта научной деятельности</span>
